:sparkles: Supports Java 8.
Signed-off-by: 秋雨落 <i@rain.cx>